# aicons

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run_chat.py  test_aicon_brain_integration.py
aicons/: AICONS.md  PERSISTENCE.md  PERSISTENCE_PLAN.md  README.md  UTILITY_FUNCTION_PLAN.md  aicon_layers.md  server.py
aicons/bayesbrainGPT/: README.md  README_BAD_AICON.md  RESEARCH.md  __init__.py  bayes_brain.py  bayes_brain_ref.py  llm_integration.py  main.py
aicons/definitions/: agent_types.py  aicon.py  aicon_types.py  base_aicon.py  simple_bad_aicon.py  zero.py
aicons/examples/: bad_aicon_example.py  manual_factors_example.py  marketing_example.py  marketing_example_zero.py  meta_ads_example.py  perception_example.py  test_sensor_mapping.py  umbrella_example.py
aicons/rules/: marketing_rules.py
aicons/templates/: chat.html
aicons/tests/: __init__.py  test_aicon_run.py  test_factors.py  test_meta_ads_sensor.py  test_meta_perception.py  test_perception_direct.py  test_perception_inference.py  test_perception_request.py  test_run_debug.py  test_simple_perception.py  test_state.py
aicons/tools/: ask_question.py  speak_out_loud.py
aicons/web_interface/: app.py
bayesbrainGPT/: README.md  config.py  llm_integration.py  main.py
bayesbrainGPT/perception/: __init__.py  perception.py  sensor.py
bayesbrainGPT/sensors/: __init__.py  traffic.py
cursor_pm/: hierarchical_implementation.txt
examples/: README.md  bad_aicon_example.py  budget_allocation_demo.py  empty_bayes_brain_example.py  manual_bayes_brain_example.py  marketing_perception_example.py  perception_example.py  persistence_example.py
notebooks/: bayes_brain.ipynb  hello_aicon.ipynb  hello_aiquon.ipynb  hello_bad.ipynb  hello_zero.ipynb  meta_ads_example.ipynb  sensors.ipynb
tests/: test_aicon_brain_core_integration.py  test_aicon_safety_checks.py  test_base_aicon.py  test_base_aicon_decision.py  test_belief_updates.py  test_math_action_space_mkt.py  test_meta_ads_sensor.py  test_perception.py  test_perception_inference.py  test_state.py  test_utility_function.py
web_interface/: app.py
(+58 files in other folders)
