[tool.poetry]
name = "babel"
version = "0.1.0"
description = ""
authors = ["Roberto Infante <roberto.infante03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tensorflow = "^2.18.0"
ipykernel = "^6.29.5"
tensorflow-probability = "^0.25.0"
tf-keras = "<2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
