[tool.poetry]
name = "aicons"
version = "0.1.0"
description = "AI-powered decision making tools for humanity by Aicons4Humanity"
authors = ["Aicons4Humanity <roberto.infante03@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Aicons4Humanity/aicons"
documentation = "https://aicons4humanity.github.io/aicons/"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
tensorflow = "^2.18.0"
ipykernel = "^6.29.5"
tensorflow-probability = "^0.25.0"
tf-keras = "<2.19.0"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
facebook-business = "^22.0.2"
flask = "^3.1.0"
psycopg2-binary = "^2.9.10"
tabulate = "^0.9.0"
python-dotenv = "^1.1.0"
google-generativeai = "^0.8.4"
aiohttp = "^3.11.16"
nest-asyncio = "^1.6.0"
flask-cors = "^5.0.1"

[tool.poetry.scripts]
aicons-chat = "aicons.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
